# MotionProfile

./: .gitignore  LICENSE  meson.build  plot.py
src/: MotionProfile.cpp  MotionProfile.h
test/: test.cpp
